--- a/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
+++ b/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
@@ -1,3 +1,23 @@
+.allButton{
+	
+	font-size: 90%;
+	color: #15428B;
+	background-position: 0 2px;
+	background-repeat: no-repeat;
+	padding: 3px 0 2px 18px;
+	
+	
+	/* height: 2.5em;
+	margin-bottom: 5px;
+	padding-bottom: 0px;
+	font-size: 12px;
+	font-family: arial, sans-serif;
+	
+	background-color: #1e90ff;
+	color: white;
+     */
+}
+
 .panel_cbtn {
 	padding-bottom: 35px;
 }
@@ -14,19 +34,42 @@
 
 .panelBase_SimpleRuleView {
 	background-color: white;
-	border: 1px solid gray;
+	border: 1px solid #d3d3d3;
 	margin-bottom: 5px;
 	display: inline-block;
 	clear: both;
 }
 
-.panel_white {
-	background-color: white;
+.menuItemDecisionTreeDisable{
+	font-size: 10pt;
+	color: #a9a9a9;
 }
+.menuItemDecisionTree{
+	font-size: 10pt;
+}
+
+.header-name-class {
+	font-weight: bold;
+}
+
+.headerAdvancedFilters {
+	font-weight: bold;
+	border: 1px solid gray;
+}
+
 
 .bold {
 	font-weight: bold;
 }
+
+
+/* j‡ verificado */
+
+
+.panel_white {
+	background-color: white;
+}
+
 
 .swrltext {
 	background-color: white;
@@ -58,9 +101,6 @@ code,.peq {
 	font-size: 7pt;
 }
 
-.header-name-class {
-	font-weight: bold;
-}
 
 .white-background {
 	border: 1px solid #BBBBBB;
@@ -276,8 +316,14 @@ h2 {
 }
 
 .det {
-	color: #55CC99;
+	color: #55AA88;
 }
+
+.operatorFilter {
+	font-weight: bold;
+	font-size: 7pt;
+}
+
 
 /*Pop up*/
 .popup-title {
