--- a/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
+++ b/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
@@ -1,21 +1,21 @@
 .allButton{
-	
+	/*
 	font-size: 90%;
 	color: #15428B;
 	background-position: 0 2px;
 	background-repeat: no-repeat;
 	padding: 3px 0 2px 18px;
+	*/
 	
-	
-	/* height: 2.5em;
+	height: 2.5em;
 	margin-bottom: 5px;
 	padding-bottom: 0px;
 	font-size: 12px;
 	font-family: arial, sans-serif;
 	
-	background-color: #1e90ff;
-	color: white;
-     */
+	/*background-color: #1e90ff;
+	color: white;*/
+    
 }
 
 .panel_cbtn {
