--- a/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
+++ b/src/br/usp/icmc/dilvan/swrlEditor/client/resources/swrleditor.css
@@ -1,21 +1,51 @@
-.allButton{
-	/*
+/*.allButton { 
 	font-size: 90%;
 	color: #15428B;
 	background-position: 0 2px;
 	background-repeat: no-repeat;
 	padding: 3px 0 2px 18px;
-	*/
 	
-	height: 2.5em;
+	height: 2.0em;
 	margin-bottom: 5px;
 	padding-bottom: 0px;
 	font-size: 12px;
 	font-family: arial, sans-serif;
+
+	//background-color: #1e90ff;
+	//color: white;
+}
+
+*/
+
+@external allButton, allButton[disabled]:hover;
+.allButton, .allButton[disabled]:hover {
+	height: 19px;
+	padding: 0 1px 2px 1px;
+	font-size: 11px;
+	border: 1px solid #d9eaef;
+	background: #d9eaef;
+	border-radius: 3px 3px 3px 3px;
+}
+
+@external allButton:hover;
+@sprite .allButton:hover {
+	border:1px solid #86abd2; 
+	gwt-image: 'btnSwrlEditor';
+	background-repeat: repeat-x;
+	background-position: 0 0; 
+	-moz-box-shadow: inset 0 0 1px #FFF;
+}
+ /* @external allButton[disabled]:hover;
+.allButton[disabled]:hover {
+	background:#d9eaef;
+	border:none;
 	
-	/*background-color: #1e90ff;
-	color: white;*/
-    
+} */ 
+@external allButton:active;
+@sprite .allButton:active {
+	gwt-image: 'btnSwrlEditor';
+	background-repeat: repeat-x;
+	background-position: 0 -17px;
 }
 
 .panel_cbtn {
@@ -40,11 +70,12 @@
 	clear: both;
 }
 
-.menuItemDecisionTreeDisable{
+.menuItemDecisionTreeDisable {
 	font-size: 10pt;
 	color: #a9a9a9;
 }
-.menuItemDecisionTree{
+
+.menuItemDecisionTree {
 	font-size: 10pt;
 }
 
@@ -57,19 +88,14 @@
 	border: 1px solid gray;
 }
 
-
 .bold {
 	font-weight: bold;
 }
 
-
 /* j‡ verificado */
-
-
 .panel_white {
 	background-color: white;
 }
-
 
 .swrltext {
 	background-color: white;
@@ -100,7 +126,6 @@ h1 {
 code,.peq {
 	font-size: 7pt;
 }
-
 
 .white-background {
 	border: 1px solid #BBBBBB;
@@ -218,6 +243,7 @@ h2 {
 }
 
 /* Tree Entity */
+@external link;
 .link {
 	font-size: 9pt;
 	color: #0000FF;
@@ -229,17 +255,20 @@ h2 {
 	cursor: pointer;
 }
 
+@external mlink;
 .mlink {
 	font-size: 8pt;
 	color: #0000FF;
 	cursor: pointer;
 }
 
+@external link:hover, mlink:hover;
 .link:hover,.mlink:hover {
 	color: #5555CC;
 	text-decoration: underline;
 }
 
+@external linkselected;
 .linkselected {
 	font-weight: bold;
 	color: black;
@@ -248,6 +277,7 @@ h2 {
 	border-bottom: 1px solid black;
 }
 
+@external linkselected:hover;
 .linkselected:hover {
 	color: black;
 	text-decoration: none;
@@ -270,11 +300,12 @@ h2 {
 }
 
 /* Errors */
+@external error:hover, .warning:hover;
 .error:hover,.warning:hover {
 	font-weight: bold;
 	background-color: #FFFFFF;
 }
-
+@external .noerror,.error,.warning;
 .noerror,.error,.warning {
 	font-family: courier new;
 	font-size: 8pt;
@@ -285,16 +316,19 @@ h2 {
 	background-position: left center;
 }
 
+@external .noerror;
 @sprite .noerror {
 	color: green;
 	gwt-image: 'ok';
 }
 
+@external .error;
 @sprite .error {
 	color: red;
 	gwt-image: 'error';
 }
 
+@external .warning;
 @sprite .warning {
 	gwt-image: 'warning';
 }
@@ -323,7 +357,6 @@ h2 {
 	font-weight: bold;
 	font-size: 7pt;
 }
-
 
 /*Pop up*/
 .popup-title {
